small style changes, fix selected text in modal on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
     }
 
     .contactInput {
-        @apply outline-none bg-slate-400/10 rounded-md border-b-2 px-6 py-5 border-transparent text-white/30 placeholder-white/30 transition-all focus:border-accent focus:text-accent hover:border-accent backdrop-blur-sm
+        @apply outline-none bg-white/5 rounded-md border-b-2 px-6 py-5 border-transparent text-white/30 placeholder-white/30 transition-all focus:border-accent focus:text-accent hover:border-accent backdrop-blur-sm
     }
 }
 
